--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx webpack --config webpack.config.js"
+    "build": "npx webpack --config webpack.config.js --watch"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.2.0",
     "file-loader": "^6.2.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2"
